# dove

./: pyproject.toml  readme.md
.github/workflows/: python-ci.yml
dovepy/: __init__.py  dove.py  passcheck.py  purify.py  utils.py
tests/: test_auth.py  test_benchmarks.py  test_edge_cases.py  test_encrypt_decrypt.py
