[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dovepy"
version = "0.0.1a2"
description = "Experimental DOVE encryption algorithm (NOT production secure)"
authors = [{ name = "I., Nabil" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: Apache-2.0 License",
    "Programming Language :: Python :: 3",
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["dovepy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
